# FASTAPI-PROJECT

./: README.md  pyproject.toml
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utills.py
app/routers/: auth.py  posts.py  users.py  votes.py
