[project]
name = "api-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "jose[cryptography]>=1.0.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
]
